# ChangeLog for dev-libs/cyrus-sasl
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.214 2010/04/29 07:04:31 hwoarang Exp $

  29 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
  cyrus-sasl-2.1.23-r1.ebuild:
  Revert my previous commit

  28 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
  cyrus-sasl-2.1.23-r1.ebuild:
  Fix typo on pkg_config

  11 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  cyrus-sasl-2.1.23-r1.ebuild:
  ia64/s390/sh/sparc stable wrt #289481

  18 Nov 2009; Brent Baude <ranger@gentoo.org> cyrus-sasl-2.1.23-r1.ebuild:
  Marking cyrus-sasl-2.1.23-r1 ppc64 for bug 289481

  10 Nov 2009; Markus Meier <maekke@gentoo.org> cyrus-sasl-2.1.23-r1.ebuild:
  arm stable, bug #289481

  03 Nov 2009; Jeroen Roovers <jer@gentoo.org> cyrus-sasl-2.1.23-r1.ebuild:
  Stable for HPPA (bug #289481).

  01 Nov 2009; nixnut <nixnut@gentoo.org> cyrus-sasl-2.1.23-r1.ebuild:
  ppc stable #289481

  30 Oct 2009; Markus Meier <maekke@gentoo.org> cyrus-sasl-2.1.23-r1.ebuild:
  amd64/x86 stable, bug #289481

  27 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  cyrus-sasl-2.1.23-r1.ebuild:
  Stable on alpha, bug #289481

  17 Oct 2009; Petteri Räty <betelgeuse@gentoo.org>
  cyrus-sasl-2.1.23-r1.ebuild:
  Remove >=virtual/jre-1.4 from DEPEND in order to fix bug #273071.

*cyrus-sasl-2.1.23-r1 (17 Aug 2009)

  17 Aug 2009; Mike Frysinger <vapier@gentoo.org>
  +files/cyrus-sasl-2.1.23-authd-fix.patch, +cyrus-sasl-2.1.23-r1.ebuild:
  Fix USE=postgres handling, add USE=sqlite support, use latest autotools,
  and cleanup ebuild in general.

  30 Jun 2009; Raúl Porcel <armin76@gentoo.org> cyrus-sasl-2.1.23.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #270261

  27 Jun 2009; Richard Freeman <rich0@gentoo.org> cyrus-sasl-2.1.23.ebuild:
  amd64 stable - 270261

  27 Jun 2009; Brent Baude <ranger@gentoo.org> cyrus-sasl-2.1.23.ebuild:
  Marking cyrus-sasl-2.1.23 ppc64 and ppc for bug 270261
