@@ -15,8 +15,8 @@ DIST cyrus-sasl-2.1.22-ntlm_impl-spnego.patch.gz 7466 RMD160 70e498d2ca27289bd72
 DIST cyrus-sasl-2.1.22.tar.gz 1609278 RMD160 086e20d01588cb86decad001244b72a37223354c SHA1 d23454ab12054714ab97d229c86cb934ce63fbb1 SHA256 c69e3853f35b14ee2c3f6e876e42d880927258ff4678aa052e5f0853db209962
 DIST cyrus-sasl-2.1.23-ntlm_impl-spnego.patch.gz 7462 RMD160 5931936a5271241a85fe6c7bc0ae3ebba9bd4534 SHA1 0e4e843823301ac16dec18d089010b7b33d548af SHA256 9514a7436b11184cfd7e8a9ccd3590ce9f89cf2dc272ffbbdeeab16f9ae4fe6f
 DIST cyrus-sasl-2.1.23.tar.gz 1613642 RMD160 b2cd9734fa8b4bad82663517f019f9b92d9d3519 SHA1 5df33a6788d6cd8329b109eff777c6cfae1a21bd SHA256 20efcc4040cbab6e89a636a07dcf5720ee07b5c62359a4e7bf2500ef6020b136
-EBUILD cyrus-sasl-2.1.22-r2.ebuild 8864 RMD160 128316b05bb96c5632c3bf9f22b3ef536a67f109 SHA1 492645891982d2e2f9a02ece5f0bdced0d7999d5 SHA256 702765d33f6a3dc2f24cbf309421b14f031eab3907113a1e91aa32b314cb8181
-EBUILD cyrus-sasl-2.1.23-r1.ebuild 8820 RMD160 138f81ae13e36cec9ef2081ed7c347f979bbe8d3 SHA1 d5d8e3e775a38655ef9e61688d102050bbc9bd3d SHA256 dd79064dfc2b36a8d40b0a6b91ebb750dac9778d54241193799f71a805800fcc
-EBUILD cyrus-sasl-2.1.23.ebuild 8899 RMD160 5786964fb701231c42f80fb8b8936af7c532ca1e SHA1 9113571c265167b27c672bb31a36063c6e72cd6c SHA256 8a748ddfbb0ed2ce83f2fac0a13cc8d2f2f11b9fe95741210836a9ed995a121b
-MISC ChangeLog 35614 RMD160 8d10c8a441729adee481ef25dd6650825879fe7f SHA1 60fa4c4b4294e13076304d9bae86446554395a98 SHA256 0d6cb68a4b08bf1ebe3f8abed7594abbf1b15ba4b0d92b5733082a46abf6e558
+EBUILD cyrus-sasl-2.1.22-r2.ebuild 8856 RMD160 c3b5295a0cab0e9c0defb70fa42562ea7b5a7320 SHA1 37ed5b3d531252be4f2fdcee1046235dd3c112d8 SHA256 4975a93823b448855657c17820632b45b671636682887e71d0682ef53823d8bf
+EBUILD cyrus-sasl-2.1.23-r1.ebuild 8812 RMD160 d5c3e0e9f21e0cd5fcde9f8447abcce520ad73a0 SHA1 9e5259165a002c049d7787dc8e0a00051ce8eb7b SHA256 5fdb35bcc9fbb2e9297a46bd7e75284b4fece669572bf8e53272ae705c95d925
+EBUILD cyrus-sasl-2.1.23.ebuild 8892 RMD160 32857481e9b7b3ee7b196ba95c7353d20bab157c SHA1 1cf9ae9ad7a6b33205b184574866cf7780c76cd0 SHA256 a7a9c1ee15b0ee861796f86fd25231f536ac034279b84ef71f97f49c2c55df80
+MISC ChangeLog 35803 RMD160 9ebabdf98356de2cdf013ade7944ea510259398d SHA1 18f264dd468fd76439a12acd63001a897e2e68f3 SHA256 a367771c2ca4fdf6cee11b9cf6d7e55670492bf1e0e6c8dff83b6c1317297e08
 MISC metadata.xml 604 RMD160 5fa3550757ac41ba71c01624d2ccda299d16ee6a SHA1 44e30f2536736489247a4cb6aa7af21439a300d8 SHA256 149340f6876213ebfa34eb30195e6cd3403909c0afcbdc805ce46e9efdf5229e
