@@ -1,6 +1,6 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/cyrus-sasl-2.1.23.ebuild,v 1.8 2009/06/30 13:36:20 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/cyrus-sasl-2.1.23.ebuild,v 1.9 2010/06/17 20:12:32 patrick Exp $
 
 WANT_AUTOCONF="latest"
 WANT_AUTOMAKE="1.7"
@@ -29,7 +29,7 @@ RDEPEND="authdaemond? ( || ( >=net-mail/courier-imap-3.0.7 >=mail-mta/courier-0.
 		mysql? ( virtual/mysql )
 		ntlm_unsupported_patch? ( >=net-fs/samba-3.0.9 )
 		pam? ( virtual/pam )
-		postgres? ( >=virtual/postgresql-base-7.2 )
+		postgres? ( dev-db/postgresql-base )
 		ssl? ( >=dev-libs/openssl-0.9.6d )"
 DEPEND="${RDEPEND}
 		>=sys-apps/sed-4
